[package]
name = "clock"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2.5" }
leptos_router = { version = "0.2.5" }
leptos_meta = { version = "0.2.5", features = ["csr"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3.28"
console_log = "1.0.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
gloo = "0.8.0"

threejs-rs = { git = "https://github.com/a-isaiahharvey/threejs-rs", branch = "main" }
